finished friend list page with new bem

--- a/Friend List/Friend List.html
+++ b/Friend List/Friend List.html
@@ -80,7 +80,7 @@
 
 					<div class="o-page-body">
 						<ul class="o-friend-list">
-							<li class="o-friend-list-item">
+							<li class="o-friend-list__item">
 								<div class="c-mini-user">
 									<div class="c-mini-user__avatar"></div>
 
@@ -88,14 +88,353 @@
 										<h1 class="c-mini-user__fullname">
 											Daisy Johnson
 										</h1>
-										<ul class="c-mini-user__detail-list">
-											<li class="c-mini-user__detail-list-item">
-												1 Blog
-											</li>
-											<li class="c-mini-user__detail-list-item">
-												2 Friends
-											</li>
-										</ul>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+									</div>
+								</div>
+							</li>
+
+							<li class="o-friend-list__item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
 									</div>
 								</div>
 							</li>
