fixed the markup

--- a/User Blog List/User Blog List.html
+++ b/User Blog List/User Blog List.html
@@ -66,146 +66,113 @@
 					<div class="o-page-body">
 						<div role="grid" class="blogs__table">
 							<div role="row" class="blog-row__head">
-								<div role="gridcell" class="blog__cell blog-number">
+								<div role="gridcell" class="blog__cell">
 									Blog No.
 								</div>
-								<div role="gridcell" class="blog__cell blog-title">
+								<div role="gridcell" class="blog__cell">
 									Title
 								</div>
-								<div role="gridcell" class="blog__cell blog-category">
+								<div role="gridcell" class="blog__cell">
 									Category
 								</div>
-								<div role="gridcell" class="blog__cell blog-author">
-									Author
-								</div>
-								<div role="gridcell" class="blog__cell blog-created">
+
+								<div role="gridcell" class="blog__cell">
 									Created
 								</div>
-								<div role="gridcell" class="blog__cell blog-updated">
+								<div role="gridcell" class="blog__cell">
 									Updated
-								</div>
-								<div role="gridcell" class="blog__cell blog-actions">
-									Actions
 								</div>
 							</div>
 							<a role="row" class="blog-row__body" href="#">
-								<div role="gridcell" class="blog__cell blog-number">
+								<div role="gridcell" class="blog__cell">
 									01
 								</div>
-								<div role="gridcell" class="blog__cell blog-title">
+								<div role="gridcell" class="blog__cell">
 									The Basics of Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-category">
+								<div role="gridcell" class="blog__cell">
 									Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-author">
-									Aurora Barnuts
-								</div>
-								<div role="gridcell" class="blog__cell blog-created">
+
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
 								</div>
-								<div role="gridcell" class="blog__cell blog-updated">
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
-								</div>
-								<div role="gridcell" class="blog__cell blog-actions">
-									<span class="edit-blog-button">Edit</span>
-									<span class="delete-blog-button">Delete</span>
 								</div>
 							</a>
 							<a role="row" class="blog-row__body" href="#">
-								<div role="gridcell" class="blog__cell blog-number">
+								<div role="gridcell" class="blog__cell">
 									02
 								</div>
-								<div role="gridcell" class="blog__cell blog-title">
+								<div role="gridcell" class="blog__cell">
 									The Basics of Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-category">
+								<div role="gridcell" class="blog__cell">
 									Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-author">
+								<div role="gridcell" class="blog__cell">
 									Aurora Barnuts
 								</div>
-								<div role="gridcell" class="blog__cell blog-created">
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
 								</div>
-								<div role="gridcell" class="blog__cell blog-updated">
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
-								</div>
-								<div role="gridcell" class="blog__cell blog-actions">
-									<span class="edit-blog-button">Edit</span>
-									<span class="delete-blog-button">Delete</span>
 								</div>
 							</a>
 							<a role="row" class="blog-row__body" href="#">
-								<div role="gridcell" class="blog__cell blog-number">
+								<div role="gridcell" class="blog__cell">
 									03
 								</div>
-								<div role="gridcell" class="blog__cell blog-title">
+								<div role="gridcell" class="blog__cell">
 									The Basics of Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-category">
+								<div role="gridcell" class="blog__cell">
 									Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-author">
-									Aurora Barnuts
-								</div>
-								<div role="gridcell" class="blog__cell blog-created">
+
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
 								</div>
-								<div role="gridcell" class="blog__cell blog-updated">
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
-								</div>
-								<div role="gridcell" class="blog__cell blog-actions">
-									<span class="edit-blog-button">Edit</span>
-									<span class="delete-blog-button">Delete</span>
 								</div>
 							</a>
 							<a role="row" class="blog-row__body" href="#">
-								<div role="gridcell" class="blog__cell blog-number">
+								<div role="gridcell" class="blog__cell">
 									04
 								</div>
-								<div role="gridcell" class="blog__cell blog-title">
+								<div role="gridcell" class="blog__cell">
 									The Basics of Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-category">
+								<div role="gridcell" class="blog__cell">
 									Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-author">
-									Aurora Barnuts
-								</div>
-								<div role="gridcell" class="blog__cell blog-created">
+
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
 								</div>
-								<div role="gridcell" class="blog__cell blog-updated">
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
-								</div>
-								<div role="gridcell" class="blog__cell blog-actions">
-									<span class="edit-blog-button">Edit</span>
-									<span class="delete-blog-button">Delete</span>
 								</div>
 							</a>
 							<a role="row" class="blog-row__body" href="#">
-								<div role="gridcell" class="blog__cell blog-number">
+								<div role="gridcell" class="blog__cell">
 									05
 								</div>
-								<div role="gridcell" class="blog__cell blog-title">
+								<div role="gridcell" class="blog__cell">
 									The Basics of Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-category">
+								<div role="gridcell" class="blog__cell">
 									Javascript
 								</div>
-								<div role="gridcell" class="blog__cell blog-author">
-									Aurora Barnuts
-								</div>
-								<div role="gridcell" class="blog__cell blog-created">
+
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
 								</div>
-								<div role="gridcell" class="blog__cell blog-updated">
+								<div role="gridcell" class="blog__cell">
 									Jan-14-12
-								</div>
-								<div role="gridcell" class="blog__cell blog-actions">
-									<span class="edit-blog-button">Edit</span>
-									<span class="delete-blog-button">Delete</span>
 								</div>
 							</a>
 						</div>
