--- a/User Profile/User Profile.html
+++ b/User Profile/User Profile.html
@@ -27,11 +27,7 @@
 						<li class="nav-link">
 							<a href="../Blog/Blog.html" class="nav-link-item">Blog</a>
 						</li>
-						<li class="nav-link">
-							<a href="../Sidebar/Sidebar.html" class="nav-link-item"
-								>Sidebar</a
-							>
-						</li>
+
 						<li class="nav-link">
 							<a href="../Signup/Signup.html" class="nav-link-item"
 								>Sign Up</a
@@ -42,37 +38,20 @@
 								>Log In</a
 							>
 						</li>
-						<li class="nav-link">
-							<a href="../Logo/Logo.html" class="nav-link-item">Logo</a>
-						</li>
+
 						<li class="nav-link">
 							<a
-								href="../Navigiation/Navigation.html"
+								href="../User Blog List/User Blog List.html"
 								class="nav-link-item"
-								>Navigation</a
+								>User Blogs</a
 							>
 						</li>
-						<li class="nav-link">
-							<a href="../Header/Header.html" class="nav-link-item"
-								>Header</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Footer/Footer.html" class="nav-link-item"
-								>Footer</a
-							>
-						</li>
+
 						<li class="nav-link">
 							<a
 								href="../User Profile/User Profile.html"
 								class="nav-link-item"
 								>User Profile</a
-							>
-						</li>
-
-						<li class="nav-link">
-							<a href="../User List/User List.html" class="nav-link-item"
-								>User List</a
 							>
 						</li>
 					</ul>
