completed user list

--- a/User List/User List.html
+++ b/User List/User List.html
@@ -59,39 +59,39 @@
 			</header>
 			<main class="o-main-area">
 				<section class="o-section-container">
-					<ul class="o-user-list">
-						<li class="o-user-list__item">
-							<div class="c-user">
-								<div class="c-user__avatar"></div>
+					<div class="o-page-heading">
+						<h1 class="c-page-heading">User List</h1>
+					</div>
 
-								<div class="c-user__info">
-									<h1 class="c-user__fullname">Daisy Johnson</h1>
-									<ul class="c-user__detail-list">
+					<div class="o-page-body">
+						<ul class="o-user-list">
+							<li class="o-user-list__item">
+								<div class="c-user">
+									<div class="c-user__avatar"></div>
+
+									<div class="c-user__info">
+										<h1 class="c-user__fullname">Daisy Johnson</h1>
+										<!-- <ul class="c-user__detail-list">
 										<li class="c-user__detail-list-item">1 Blog</li>
 										<li class="c-user__detail-list-item">
 											2 Friends
 										</li>
-									</ul>
+									</ul> -->
+									</div>
 								</div>
-							</div>
-						</li>
+							</li>
 
-						<li class="o-user-list__item">
-							<div class="c-user">
-								<div class="c-user__avatar"></div>
+							<li class="o-user-list__item">
+								<div class="c-user">
+									<div class="c-user__avatar"></div>
 
-								<div class="c-user__info">
-									<h1 class="c-user__fullname">Daisy Johnson</h1>
-									<ul class="c-user__detail-list">
-										<li class="c-user__detail-list-item">1 Blog</li>
-										<li class="c-user__detail-list-item">
-											2 Friends
-										</li>
-									</ul>
+									<div class="c-user__info">
+										<h1 class="c-user__fullname">Daisy Johnson</h1>
+									</div>
 								</div>
-							</div>
-						</li>
-					</ul>
+							</li>
+						</ul>
+					</div>
 				</section>
 			</main>
 			<footer class="footer">
