--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -66,7 +66,7 @@
 					<div class="o-page-body">
 						<div class="c-form">
 							<form action="" class="c-form__body">
-								<div class="">
+								<div class="c-form-input">
 									<label class="c-form-input__label" for="username"
 										>Username</label
 									>
@@ -140,7 +140,7 @@
 										type="submit"
 										class="button"
 									>
-										Signup
+										Sign Up
 									</button>
 								</div>
 							</form>
