started styling the comment section

--- a/Blog Page/Blog Page.html
+++ b/Blog Page/Blog Page.html
@@ -171,7 +171,34 @@
 									</div>
 								</div>
 							</div>
-							<div class="c-blog__footer"></div>
+							<div class="c-blog__footer">
+								<div class="c-blog-comments">
+									<div class="c-blog-comments__heading">
+										<h3 class="c-blog-comments__title">Comments</h3>
+									</div>
+									<div class="c-blog-comments__body">
+										<form action="" class="c-comments-form">
+											<div class="c-comments-form__input">
+												<textarea
+													class="c-comments-form__input-message"
+													name="comment-message"
+													id=""
+													rows="3"
+												></textarea>
+											</div>
+
+											<div class="c-comments-form__button">
+												<button
+													type="submit"
+													class="c-comments-form__button-submit"
+												>
+													Add Comment
+												</button>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
