--- a/User Profile/User Profile.html
+++ b/User Profile/User Profile.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Component Developemnt for Blog Project</title>
 		<link rel="stylesheet" href="../index.css" />
+		<!-- <link rel="stylesheet" href="../normalize.css" /> -->
 		<link rel="stylesheet" href="../Header/Header.css" />
 		<link rel="stylesheet" href="../Navigiation/Navigation.css" />
 		<link rel="stylesheet" href="../Footer/Footer.css" />
